--- a/eager-w.css
+++ b/eager-w.css
@@ -13,13 +13,14 @@ body{
 
 header{
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: auto;
     align-items: center;
     background-color: #4e4e50;
     height: 10vh;
     font-size: 20px;
     font-weight: 100;
+    overflow: hidden;
 }
 
 .logo-container, .nav-links, .cart{
@@ -46,11 +47,27 @@ nav{
 
 .cart{
     flex: 1;
-    justify-content: flex-end;
+    justify-content: center;
+}
+
+.burger{
+    margin: auto 20px auto 20%;
+    display: none;
+    flex: 1;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: rgb(236, 236, 236);
+    margin: 5px;
 }
 
 .intro{
-    width: 80%;
+    overflow: hidden;
+    width: 100%;
     height: 20px auto;
     margin: 40px auto;
     background-image: url(./desk.jpeg);
@@ -63,7 +80,7 @@ nav{
 
 .intro-text{
     width: 30%;
-    background-color: rgba(0,0,0,.4);
+    background-color: rgba(0,0,0,.3);
 }
 
 .intro-head{
@@ -78,7 +95,7 @@ nav{
 }
 
 .middle{
-    width: 80%;
+    width: 100%;
     height: 20px auto;
     margin: 20px auto;
     background-image: url(./laptop-headphones.jpeg);
@@ -91,7 +108,7 @@ nav{
 
 .middle-text{
     width: 30%;
-    background-color: rgba(0,0,0,.4);
+    background-color: rgba(0,0,0,.3);
 }
 
 .middle-head{
@@ -105,7 +122,7 @@ nav{
 }
 
 .end{
-    width: 80%;
+    width: 100%;
     height: 20px auto;
     margin: 20px auto;
     background-image: url(./desk-book.jpeg);
@@ -114,11 +131,12 @@ nav{
     color: white;
     display: flex;
     justify-content: flex-end;
+    
 }
 
 .end-text{
     width: 30%;
-    background-color: rgba(0,0,0,.4);
+    background-color: rgba(0,0,0,.3);
 }
 
 .end-head{
@@ -134,7 +152,7 @@ nav{
 footer{
     background-color: #4e4e50;
     font-size: 20px;
-    width: 80%;
+    width: 100%;
     margin: 30px auto ;
     display: flex;
     justify-content: center;
@@ -143,25 +161,128 @@ footer{
     height: 7vh;
 }
 
-/*
-<div class="intro">
-            <div class="intro-text">
-                <h4 class="intro-head">This is a heading</h4>
-                <p class="intro-p">This is something that I will later replace with something worthwhile. For now I will just have to keep 
-                typing and typing. This will continue for another line or so at which point I will have enough written to take up the space I need.This is something that I will later replace with something worthwhile. For now I will just have to keep 
-                typing and typing. This will continue for another line or so at which point I will have enough written to take up the space I need.This is something that I will later replace with something worthwhile. For now I will just have to keep 
-                typing and typing. This will continue for another line or so at which point I will have enough written to take up the space I need.
-                </p>
-            </div>
-        </div>
-        <div class="middle">
-            <div class="middle-text">
-                <h4 class="middle-head">This is another heading.</h4>
-                <p class="intro-p">This is something that I will later replace with something worthwhile. For now I will just have to keep 
-                    typing and typing. This will continue for another line or so at which point I will have enough written to take up the space I need.This is something that I will later replace with something worthwhile. For now I will just have to keep 
-                    typing and typing. This will continue for another line or so at which point I will have enough written to take up the space I need.This is something that I will later replace with something worthwhile. For now I will just have to keep 
-                    typing and typing. This will continue for another line or so at which point I will have enough written to take up the space I need.
-                </p>
-            </div>
-        </div>
-*/
+
+
+
+@media all and (max-width: 1220px) {
+    .burger{
+        display: none;
+    }
+
+    
+    .intro p, .middle p, .end p{
+        font-size: 22px;
+    }
+
+    .intro h4, .middle h4, .end h4{
+        font-size: 27px;
+    }
+
+
+}
+
+@media all and (max-width: 1130px) {
+    .burger{
+        display: none;
+    }
+
+    
+    .intro p, .middle p, .end p{
+        font-size: 20px;
+    }
+
+    .intro h4, .middle h4, .end h4{
+        font-size: 25px;
+    }
+
+
+}
+
+@media all and (max-width: 1064px) {
+    .burger{
+        display: none;
+    }
+
+    
+    .intro p, .middle p, .end p{
+        font-size: 17px;
+    }
+
+    .intro h4, .middle h4, .end h4{
+        font-size: 22px;
+    }
+
+
+}
+
+@media all and (max-width: 860px) {
+    .burger{
+        display: block;
+    }
+
+    .cart{
+        display: none;
+    }
+    
+    header{
+        font-size: 25px;
+    }
+
+    .logo-container{
+        flex: 3;
+        justify-content: center;
+    }
+
+    .intro-text, .middle-text, .end-text{
+        width: 80%;
+        margin: auto;
+    }
+
+    .intro p, .middle p, .end p{
+        font-size: 15px;
+    }
+
+    .intro h4, .middle h4, .end h4{
+        font-size: 20px;
+    }
+
+    body{
+        overflow-x: hidden;
+    }
+
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #4e4e50;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+
+}
+
+.nav-active{
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
